@@ -2,7 +2,32 @@
 * 73 ==> 74 *
 *************
 
-- Removed configuration parameter NumberOfEventProcessors
+- New configuration parameters added: EnableEventStormDetection,
+  EventStormEventsPerSecond, EventStormDuration
+- Removed configuration parameters NumberOfEventProcessors, EventStormThreshold
+- New events added:
+	INSERT INTO event_cfg (event_code,event_name,severity,flags,message,description) VALUES
+	(
+		EVENT_EVENT_STORM_DETECTED, 'SYS_EVENT_STORM_DETECTED',
+		EVENT_SEVERITY_MAJOR, 1,
+		'Event storm detected (Events per second: %1)',
+		'Generated when system detects an event storm.#0D#0A' CONCAT
+		'Parameters:#0D#0A' CONCAT
+		'   1) Events per second#0D#0A' CONCAT
+		'   2) Duration#0D#0A' CONCAT
+		'   3) Threshold'
+	);
+	INSERT INTO event_cfg (event_code,event_name,severity,flags,message,description) VALUES
+	(
+		EVENT_EVENT_STORM_ENDED, 'SYS_EVENT_STORM_ENDED',
+		EVENT_SEVERITY_NORMAL, 1,
+		'Event storm ended',
+		'Generated when system clears event storm condition.#0D#0A' CONCAT
+		'Parameters:#0D#0A' CONCAT
+		'   1) Events per second#0D#0A' CONCAT
+		'   2) Duration#0D#0A' CONCAT
+		'   3) Threshold'
+	);
 
 
 *************
