@@ -102,6 +102,8 @@
 #define EVENT_INTERFACE_UNKNOWN        45
 #define EVENT_INTERFACE_DISABLED       46
 #define EVENT_INTERFACE_TESTING        47
+#define EVENT_EVENT_STORM_DETECTED     48
+#define EVENT_EVENT_STORM_ENDED        49
 
 #define EVENT_SNMP_UNMATCHED_TRAP      500
 #define EVENT_SNMP_COLD_START          501
