@@ -4,39 +4,39 @@
 ** ex: syntax=sql
 */
 
-INSERT INTO event_policy (rule_id,flags,comments,alarm_message,alarm_severity,alarm_key,script,alarm_timeout,alarm_timeout_event)
+INSERT INTO event_policy (rule_id,flags,comments,alarm_message,alarm_severity,alarm_key,script,alarm_timeout,alarm_timeout_event,situation_id,situation_instance)
 	VALUES (0,7944,'Show alarm when node is down',
-		'%m',5,'NODE_DOWN_%i','#00',0,EVENT_ALARM_TIMEOUT);
-INSERT INTO event_policy (rule_id,flags,comments,alarm_message,alarm_severity,alarm_key,script,alarm_timeout,alarm_timeout_event)
+		'%m',5,'NODE_DOWN_%i','#00',0,EVENT_ALARM_TIMEOUT,0,'#00');
+INSERT INTO event_policy (rule_id,flags,comments,alarm_message,alarm_severity,alarm_key,script,alarm_timeout,alarm_timeout_event,situation_id,situation_instance)
 	VALUES (1,7944,'Acknowlege node down alarms when node is up',
-		'%m',6,'NODE_DOWN_%i','#00',0,EVENT_ALARM_TIMEOUT);
-INSERT INTO event_policy (rule_id,flags,comments,alarm_message,alarm_severity,alarm_key,script,alarm_timeout,alarm_timeout_event)
+		'%m',6,'NODE_DOWN_%i','#00',0,EVENT_ALARM_TIMEOUT,0,'#00');
+INSERT INTO event_policy (rule_id,flags,comments,alarm_message,alarm_severity,alarm_key,script,alarm_timeout,alarm_timeout_event,situation_id,situation_instance)
 	VALUES (2,7944,'Show alarm when network service is down or in unknown state',
-		'%m',5,'SERVICE_DOWN_%i_%2','#00',0,EVENT_ALARM_TIMEOUT);
-INSERT INTO event_policy (rule_id,flags,comments,alarm_message,alarm_severity,alarm_key,script,alarm_timeout,alarm_timeout_event)
+		'%m',5,'SERVICE_DOWN_%i_%2','#00',0,EVENT_ALARM_TIMEOUT,0,'#00');
+INSERT INTO event_policy (rule_id,flags,comments,alarm_message,alarm_severity,alarm_key,script,alarm_timeout,alarm_timeout_event,situation_id,situation_instance)
 	VALUES (3,7944,'Acknowlege network service down/unknown alarms when service is up',
-		'%m',6,'SERVICE_DOWN_%i_%2','#00',0,EVENT_ALARM_TIMEOUT);
-INSERT INTO event_policy (rule_id,flags,comments,alarm_message,alarm_severity,alarm_key,script,alarm_timeout,alarm_timeout_event)
+		'%m',6,'SERVICE_DOWN_%i_%2','#00',0,EVENT_ALARM_TIMEOUT,0,'#00');
+INSERT INTO event_policy (rule_id,flags,comments,alarm_message,alarm_severity,alarm_key,script,alarm_timeout,alarm_timeout_event,situation_id,situation_instance)
 	VALUES (4,7944,'Show alarm when interface is down',
-		'%m',5,'IF_DOWN_%i_%1','#00',0,EVENT_ALARM_TIMEOUT);
-INSERT INTO event_policy (rule_id,flags,comments,alarm_message,alarm_severity,alarm_key,script,alarm_timeout,alarm_timeout_event)
+		'%m',5,'IF_DOWN_%i_%1','#00',0,EVENT_ALARM_TIMEOUT,0,'#00');
+INSERT INTO event_policy (rule_id,flags,comments,alarm_message,alarm_severity,alarm_key,script,alarm_timeout,alarm_timeout_event,situation_id,situation_instance)
 	VALUES (5,7944,'Acknowlege interface down alarms when interface is up',
-		'%m',6,'IF_DOWN_%i_%1','#00',0,EVENT_ALARM_TIMEOUT);
-INSERT INTO event_policy (rule_id,flags,comments,alarm_message,alarm_severity,alarm_key,script,alarm_timeout,alarm_timeout_event)
+		'%m',6,'IF_DOWN_%i_%1','#00',0,EVENT_ALARM_TIMEOUT,0,'#00');
+INSERT INTO event_policy (rule_id,flags,comments,alarm_message,alarm_severity,alarm_key,script,alarm_timeout,alarm_timeout_event,situation_id,situation_instance)
 	VALUES (6,7944,'Generate alarm when incorrect network mask detected on interface',
-		'%m',2,'BAD_NETMASK_%i_%2','#00',0,EVENT_ALARM_TIMEOUT);
-INSERT INTO event_policy (rule_id,flags,comments,alarm_message,alarm_severity,alarm_key,script,alarm_timeout,alarm_timeout_event)
+		'%m',2,'BAD_NETMASK_%i_%2','#00',0,EVENT_ALARM_TIMEOUT,0,'#00');
+INSERT INTO event_policy (rule_id,flags,comments,alarm_message,alarm_severity,alarm_key,script,alarm_timeout,alarm_timeout_event,situation_id,situation_instance)
 	VALUES (7,7944,'Generate alarm when MAC address change detected on interface',
-		'%m',1,'#00','#00',0,EVENT_ALARM_TIMEOUT);
-INSERT INTO event_policy (rule_id,flags,comments,alarm_message,alarm_severity,alarm_key,script,alarm_timeout,alarm_timeout_event)
+		'%m',1,'#00','#00',0,EVENT_ALARM_TIMEOUT,0,'#00');
+INSERT INTO event_policy (rule_id,flags,comments,alarm_message,alarm_severity,alarm_key,script,alarm_timeout,alarm_timeout_event,situation_id,situation_instance)
 	VALUES (8,7944,'Generate alarm when server enconters NXSL script execution error',
-		'%m',2,'SCRIPT_ERR_%1_%2','#00',0,EVENT_ALARM_TIMEOUT);
-INSERT INTO event_policy (rule_id,flags,comments,alarm_message,alarm_severity,alarm_key,script,alarm_timeout,alarm_timeout_event)
+		'%m',2,'SCRIPT_ERR_%1_%2','#00',0,EVENT_ALARM_TIMEOUT,0,'#00');
+INSERT INTO event_policy (rule_id,flags,comments,alarm_message,alarm_severity,alarm_key,script,alarm_timeout,alarm_timeout_event,situation_id,situation_instance)
 	VALUES (9,7944,'Show alarm when connection with backend database is lost',
-		'%m',4,'DB_CONN','#00',0,EVENT_ALARM_TIMEOUT);
-INSERT INTO event_policy (rule_id,flags,comments,alarm_message,alarm_severity,alarm_key,script,alarm_timeout,alarm_timeout_event)
+		'%m',4,'DB_CONN','#00',0,EVENT_ALARM_TIMEOUT,0,'#00');
+INSERT INTO event_policy (rule_id,flags,comments,alarm_message,alarm_severity,alarm_key,script,alarm_timeout,alarm_timeout_event,situation_id,situation_instance)
 	VALUES (10,7944,'Acknowlege DB connection loss alarm when connection restored',
-		'%m',6,'DB_CONN','#00',0,EVENT_ALARM_TIMEOUT);
+		'%m',6,'DB_CONN','#00',0,EVENT_ALARM_TIMEOUT,0,'#00');
 
 INSERT INTO policy_event_list (rule_id,event_code) VALUES (0,EVENT_NODE_DOWN);
 INSERT INTO policy_event_list (rule_id,event_code) VALUES (1,EVENT_NODE_UP);
