@@ -171,7 +171,11 @@ INSERT INTO config (var_name,var_value,is_visible,need_server_restart)
 INSERT INTO config (var_name,var_value,is_visible,need_server_restart)
 	VALUES ('AllowDirectSMS','0',1,0);
 INSERT INTO config (var_name,var_value,is_visible,need_server_restart)
-	VALUES ('EventStormThreshold','0',1,1);
+	VALUES ('EnableEventStormDetection','0',1,1);
+INSERT INTO config (var_name,var_value,is_visible,need_server_restart)
+	VALUES ('EventStormEventsPerSecond','100',1,1);
+INSERT INTO config (var_name,var_value,is_visible,need_server_restart)
+	VALUES ('EventStormDuration','15',1,1);
 
 
 /*
